--- a/lib/less.less
+++ b/lib/less.less
@@ -48,7 +48,7 @@ a{text-decoration: none;}
 	.section();
 }
 .section-2{
-	.section(200px;right;);
+	.section(50%;right;);
 }
 
 .section(@width: 300px;@float: left;){
@@ -110,5 +110,20 @@ a{text-decoration: none;}
 	}
 	span{
 		float: right;
+	}
+}
+
+.btn{
+	padding: 5px 7px;
+	height: ;
+	font-size: 14px;
+	font-family: "微软雅黑";
+	color: #fff;
+	cursor: pointer;
+	border: none;
+	.radius(5px);
+	background-color: @nice-blue;
+	&:hover{
+		background-color:@nice-blue+20;
 	}
 }
